# haskell-learning

Chapter-1/: learned.txt
Chapter-10/: exercise.hs  learned.hs  students.hs
Chapter-11/: exercise.hs  jammin.hs  learned.hs
Chapter-12/: exercise.hs  learned.hs
Chapter-13/compare-two-values/: Makefile  README.md  compare-two-values.cabal  stack.yaml
Chapter-13/compare-two-values/src/: Main.hs
Chapter-14/morse/: Makefile  README.md  morse.cabal
Chapter-14/morse/src/: Main.hs  Morse.hs
Chapter-14/morse/tests/: tests.hs
Chapter-14/quickcheck-testing/: Makefile  README.md  quickcheck-testing.cabal
Chapter-14/quickcheck-testing-without-hspec/: LICENSE  Makefile  README.md  quickcheck-testing-without-hspec.cabal
Chapter-14/quickcheck-testing-without-hspec/src/: Main.hs
Chapter-14/quickcheck-testing/src/: Main.hs  Random.hs
Chapter-14/test-addition/: Makefile  README.md  test-addition.cabal
Chapter-14/test-addition/src/: Addition.hs  Main.hs
Chapter-15/: exercise.hs  learned.hs
Chapter-15/associativity-using-quickcheck/: Makefile  README.md  associativity-using-quickcheck.cabal
Chapter-15/associativity-using-quickcheck/src/: Associative.hs  Exercise.hs  Main.hs
Chapter-16/: learned.hs
Chapter-16/functor-exercise/: README.md  functor-exercise.cabal
Chapter-16/functor-exercise/tests/: tests.hs
Chapter-17/: exercise.hs  learned.hs
Chapter-17/applicative-testing/: README.md  applicative-testing.cabal
Chapter-17/applicative-testing/test/: Constant.hs  Main.hs
Chapter-18/: eitherMonad.hs  exercise.hs  learned.hs
Chapter-18/monad-quickcheck/: README.md  monad-quickcheck.cabal
Chapter-18/monad-quickcheck/app/: Main.hs
Chapter-18/monad-quickcheck/src/: Lib.hs
Chapter-18/monad-quickcheck/test/: CountMe.hs  EitherTest.hs  Identity.hs  Spec.hs
Chapter-19/scotty-tutorial/: README.md  scotty-tutorial.cabal
Chapter-19/scotty-tutorial/app/: Main.hs
Chapter-19/scotty-tutorial/src/: Lib.hs  Uuid.hs
Chapter-19/scotty-tutorial/test/: Spec.hs
Chapter-2/: comprehensionCheck.hs  hello.hs  learned.txt  letAndWhere.hs  letToLambda.hs  troubleShooting.hs  waxon.hs
Chapter-20/: exercise.hs  learned.hs
Chapter-21/: learned.hs
Chapter-21/instances/: instances.cabal
Chapter-21/instances/app/: Main.hs
Chapter-21/instances/test/: Identity.hs  List.hs  Optional.hs  Spec.hs  Tree.hs
Chapter-22/: Person.hs  ReaderPratice.hs  exercise.hs  learned.hs
Chapter-23/: Moi.hs  MyState.hs  learned.hs
Chapter-23/die/: die.cabal
Chapter-23/die/app/: Main.hs
Chapter-23/die/src/: Die.hs  FizzBuzz.hs  Lib.hs
Chapter-24/exercise/: exercise.cabal
Chapter-24/exercise/src/: Lib.hs  PositiveInteger.hs  SemVer.hs  TeleNumbers.hs
Chapter-24/parser/: parser.cabal
Chapter-24/parser/app/: Main.hs
Chapter-24/parser/src/: Marshalling.hs  MyParser.hs
Chapter-24/parser/test/: AltParsing.hs  Spec.hs
Chapter-25/: BiFunctor.hs  Exercise.hs
Chapter-26/: EitherT.hs  MaybeT.hs  ReaderT.hs  StateT.hs
Chapter-26/scottyTrans/: README.md  scottyTrans.cabal
Chapter-26/scottyTrans/app/: Main.hs
Chapter-26/scottyTrans/src/: Lib.hs
Chapter-26/scottyTrans/test/: Spec.hs
Chapter-28/dataStructures/: dataStructures.cabal
Chapter-28/dataStructures/app/: Main.hs
Chapter-28/dataStructures/src/: BenchText.hs  BenchVector.hs  Lib.hs
Chapter-3/: exercise.hs
Chapter-4/: exercise.hs  learned.hs
Chapter-5/: learned.hs
Chapter-6/: exercise.hs  fact.hs  learned.hs
Chapter-7/: arith4.hs  exercise.hs  learned.hs
Chapter-8/: exercise.hs  learned.hs
Chapter-9/: exercise.hs  learned.hs
Functor-Applicative-Monad/: learned.hs
Personal_Assignments/: JsonParser.hs  fact.hs  maybe.hs  set.hs
