name:                quickcheck-testing-without-hspec
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shubhamjagdhane/quickcheck-testing-without-hspec#readme
license:             BSD3
license-file:        LICENSE
author:              Shubham Jagdhane
maintainer:          shubhamjagdhane1010@gmail.com
copyright:           Shubham Jagdhane
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable quickcheck-testing-without-hspec
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , QuickCheck
