name:                monad-quickcheck
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shubhamjagdhane/monad-quickcheck#readme
license:             BSD3
license-file:        LICENSE
author:              Shubham Jagdhane
maintainer:          shubhamjagdhane1010@gmail.com
copyright:           Shubham Jagdhane
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  exposed-modules:
      Lib
  other-modules:
      Paths_monad_quickcheck
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable monad-quickcheck-exe
  main-is: Main.hs
  other-modules:
      Paths_monad_quickcheck
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , monad-quickcheck
  default-language: Haskell2010

test-suite monad-quickcheck-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_monad_quickcheck
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , monad-quickcheck
    , QuickCheck
    , checkers
  default-language: Haskell2010