name:                scotty-tutorial
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shubhamjagdhane/scotty-tutorial#readme
license:             BSD3
license-file:        LICENSE
author:              Shubham Jagdhane
maintainer:          shubhamjagdhane1010@gmail.com
copyright:           Shubham Jagdhane
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  exposed-modules:
      Lib
  other-modules:
      Paths_scotty_tutorial
    , Uuid
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , scotty
    , text
    , uuid
  default-language: Haskell2010

executable scotty-tutorial-exe
  main-is: Main.hs
  other-modules:
      Paths_scotty_tutorial
  hs-source-dirs:
      app 
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , scotty-tutorial

  default-language: Haskell2010

test-suite scotty-tutorial-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_scotty_tutorial
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , scotty-tutorial
  
